# Reticle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DAEMON.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  reticle-serve.sh  topology.yaml.example
.github/workflows/: desktop-release.yml
assets/icon/: README.md
core/: Cargo.toml
core/src/: config.rs  cron.rs  custom_layer.rs  events.rs  health.rs  lib.rs  local.rs  shell.rs  ssh.rs  terminal.rs  terminal_win.rs  watcher.rs
docs/: daemon.md  getting-started.md  shortcuts.md  topology-reference.md
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  state.rs
src/app/: AccessGate.js  InspectorPanel.js  RightPanel.js  StatusBar.js  TerminalDock.js  Toolbar.js
src/canvas/: Camera.js  Connection.js  Grid.js  Interaction.js  NodeDrag.js  Palette.js  Renderer.js  ResizeDrag.js  World.js
src/canvas/edges/: EdgeView.js  styles.js
src/canvas/nodes/: GroupView.js  NodeView.js  icons.js  index.js  kinds.js
src/core/: api.js  dom.js  eventBus.js  ops.js  persistence.js  store.js  theme.js
src/core/export/: exportPdf.js  pdfWriter.js  svgGlyph.js
src/samples/: aws-mine.yaml  enterprise-aws.yaml  enterprise-gcp.yaml  enterprise-onprem.yaml  homelab-k8s.yaml  homelab-pi.yaml
src/styles/: base.css  canvas.css  chrome.css  inspector.css  node.css  palette.css  terminal.css
web/: DEPLOY.md  index.html  robots.txt  sitemap.xml  styles.css
