[package]
name = "reticle-core"
version = "0.1.0"
description = "Domain modules shared by the Reticle desktop (Tauri) and daemon (axum) shells"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"
nix = { version = "0.29", features = ["process", "term", "fs"] }
libc = "0.2"
