[package]
name = "reticle-core"
version = "1.0.0"
description = "Domain modules shared by the Reticle desktop (Tauri) and daemon (axum) shells"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"

libc = "0.2"

# The pty layer (terminal.rs) forks real ssh/kubectl under a pty — that's
# nix/forkpty, Unix only. Windows builds get the terminal_win.rs stub.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "term", "fs"] }
