[package]
name = "reticle"
version = "1.0.0"
description = "A local-first infra operations canvas"
authors = ["you"]
edition = "2021"

[lib]
name = "reticle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reticle-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
nix = { version = "0.29", features = ["process", "term", "fs"] }
libc = "0.2"
shellexpand = "3"
